--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -8,8 +8,8 @@
                 <h1 class="title size-4"><%= checklist.name %></h1>
             </div>
             <div class="column is-one-fifth">
-                <a href="add-task.html" class="button is-success is-small">Nova Tarefa</a>
-                <a href="index.html" class="button is-small">Voltar</a>
+                <a href="/checklists/new/" class="button is-success is-small">Nova Tarefa</a>
+                <a href="/checklists" class="button is-small">Voltar</a>
             </div>
         </div>
 
