--- a/src/views/checklists/new.ejs
+++ b/src/views/checklists/new.ejs
@@ -1,11 +1,11 @@
-<%- include('../layouts/header', {title: 'Nova Tarefa'}) %>
+<%- include('../layouts/header', {title: 'Nova lista de tarefas'}) %>
 <%- include('../layouts/menu'); -%>
 
 <section class="section">
     <div class="container">
       <h1 class="title size-4">Nova Lista</h1>
 
-      <%- include('./form', {url: '/checklists', checklist: checklist} ); %>
+      <%- include('./form', { url: '/checklists?_method=post', checklist: checklist} ); %>
 
     </div>
 </section>
